--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/dcbcb40c25.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <title>Home Page</title>
   </head>
   <body>
@@ -38,48 +37,18 @@
           </div>
         </div>
       </nav>
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <form class="d-flex">
+            <input id="search-bar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button id="submit-button" class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+      </nav>
     </header>
     <main>
-<<<<<<< HEAD
-      <div class="container-fluid">
-        <form class="d-flex">
-          <input id="search-bar" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button id="submit-button" class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-      <div class="container-fluid">
-        <a id = "map-link" target="_blank"></a>
-        <div class="weather" id="weather-widget">
-=======
       <a id = "map-link" target="_blank"></a>
       <div class="weather special-card2" id="weather-widget">
->>>>>>> development
         
-        </div>
-      </div>
-      <div class="container-fluid">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6" aria-label="Slide 7"></button>
-          </div>
-          <div class="carousel-inner row row-cols-1" id="weather-carousel">
-            
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
       </div>
     </main>
     <footer class="footer fixed-bottom bg-light">   <!--removed nav tags and used footer tags instead-->
